@@ -95,9 +95,9 @@ our %lang2keyboard =
   'lb'  => 'ch_fr:89 be:85 us_intl:70 fr:60 dvorak_fr:20',
   'li'  => 'us_intl:80 be:70 nl:10 us:5',
   'lo'  => 'lao:90',
-  'lt'  => 'lt:80 lt_new:70 lt_b:60 lt_p:50',
-  'ltg' => 'lv:90 lt:40 lt_new:30 lt_b:20 lt_p:10 ee:5',
-  'lv'  => 'lv:90 lt:40 lt_new:30 lt_b:20 lt_p:10 ee:5',
+  'lt'  => 'lt:80',
+  'ltg' => 'lv:90 lt:40 ee:5',
+  'lv'  => 'lv:90 lt:40 ee:5',
   'mi'  => 'mao:90 gb:30 us_intl:20',
   'mk'  => 'mk:90',
   'ml'  => 'mal:90',
@@ -261,11 +261,7 @@ arch() =~ /^sparc/ ? (
  "lat" => [ N_("_: keyboard\nLatin American"), "la-latin1",      "latam", 0 ],
 # TODO: console map
  "lao" => [ N_("_: keyboard\nLaotian"),         "us",            "la",    1 ],
- "lt" => [ N_("_: keyboard\nLithuanian AZERTY (old)"), "lt-latin7", "lt(lt_a)", 0 ],
-#- TODO: write a console kbd map for lt_new
- "lt_new" => [ N_("_: keyboard\nLithuanian AZERTY (new)"), "lt-latin7", "lt(std)", 0 ],
- "lt_b" => [ N_("_: keyboard\nLithuanian \"number row\" QWERTY"), "ltb-latin7", "lt(us)", 1 ],
- "lt_p" => [ N_("_: keyboard\nLithuanian \"phonetic\" QWERTY"), "ltp-latin7", "lt(phonetic)", 0 ],
+ "lt" => [ N_("_: keyboard\nLithuanian"), "lt-latin7", "lt,us", 1 ],
  "lv" => [ N_("_: keyboard\nLatvian"),	 "lv-latin7",       "lv",    0 ],
  "mal" => [ N_("_: keyboard\nMalayalam"),     "us",              "in(mal)", 1 ],
  "mao" => [ N_("_: keyboard\nMaori"),	      "us",              "mao",   0 ],
